# pytest-aiohttp

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yaml  codeql.yml  test.yml
pytest_aiohttp/: __init__.py  _version.py  plugin.py
tests/: test_fixtures.py  test_obsolete_fixtures.py  test_switch_mode.py
