[metadata]
name = pytest-aiohttp
version = attr: pytest_aiohttp.__version__
url = https://github.com/aio-libs/pytest-aiohttp
project_urls =
  GitHub = https://github.com/aio-libs/pytest-aiohttp
  Changelog = https://github.com/aio-libs/pytest-aiohttp/blob/master/CHANGES.rst
description = Pytest plugin for aiohttp support
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = Apache 2.0
license_file = LICENSE
classifiers =
  Development Status :: 4 - Beta

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13

  Topic :: Software Development :: Testing

  Framework :: AsyncIO
  Framework :: Pytest
  Framework :: aiohttp
  Typing :: Typed

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

setup_requires =
  setuptools_scm >= 6.2

install_requires =
  pytest >= 6.1.0
  aiohttp >= 3.11.0
  pytest-asyncio >= 0.17.2

[options.extras_require]
testing =
  coverage == 7.10.0
  mypy == 1.17.0

[options.entry_points]
pytest11 =
    aiohttp = pytest_aiohttp.plugin

[coverage:run]
source = pytest_aiohttp
branch = true

[coverage:report]
show_missing = true

[tool:pytest]
addopts = -rsx --tb=short
testpaths = tests
asyncio_mode = auto
junit_family=xunit2
filterwarnings = error

[flake8]
max-line-length = 88
